--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # use ctrl-a instead of ctrl-b to initial tmux commands # unbind C-b
-set -g prefix C-a
+set -g prefix C-g
 
 # ensure 256 color for tmux to work better with vim/airline
 set -g default-terminal "screen-256color"
